config/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lonn
  namespace: apps
  labels:
    k8s-app: lonn
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: lonn
  template:
    metadata:
      name: lonn
      labels:
        k8s-app: lonn
    spec:
      containers:
        - name: lonn
          image: <IMAGE>
          imagePullPolicy: Always
          securityContext:
            privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
  minReadySeconds: 15
